# METUCube_FS

./: README.md
apps/DS/: CMakeLists.txt
apps/DS/fsw/inc/: ds_msgids.h
apps/DS/fsw/src/: ds_app.c  ds_file.c  ds_file.h
apps/DS/fsw/tables/: ds_file_tbl.c  ds_filter_tbl.c
apps/HK/: CMakeLists.txt
apps/HK/fsw/inc/: hk_events.h
apps/HK/fsw/src/: hk_app.c  hk_utils.c
apps/HK/fsw/tables/: hk_cpy_tbl.c
apps/adcsMC_app/: CMakeLists.txt  adcsMC_app.c  adcsMC_app.h  adcsMC_app_cmds.c  adcsMC_app_cmds.h  adcsMC_app_dispatch.c  adcsMC_app_dispatch.h  adcsMC_config_msgids.h  mission_build.cmake
apps/adcsMC_app/fsw/inc/: adcsMC_app_config.h  adcsMC_app_events.h  adcsMC_app_extern_typedefs.h  adcsMC_app_msg.h  adcsMC_app_msgids.h  adcsMC_app_tbldefs.h
apps/adcsMC_app/fsw/src/: adcsMC_app.c  adcsMC_app.h  adcsMC_app_cmds.c  adcsMC_app_cmds.h  adcsMC_app_dispatch.c  adcsMC_app_dispatch.h
apps/adcsMC_app/fsw/tables/: adcsMC_app_config_tbl.c
apps/adcsttMC_app/: CMakeLists.txt  adcsttMC_app.c  adcsttMC_app.h  adcsttMC_app_cmds.c  adcsttMC_app_cmds.h  adcsttMC_app_dispatch.c  adcsttMC_app_dispatch.h  adcsttMC_config_msgids.h  mission_build.cmake
apps/adcsttMC_app/fsw/inc/: adcsttMC_app_config.h  adcsttMC_app_events.h  adcsttMC_app_extern_typedefs.h  adcsttMC_app_msg.h  adcsttMC_app_msgids.h  adcsttMC_app_tbldefs.h
apps/adcsttMC_app/fsw/src/: adcsttMC_app.c  adcsttMC_app.h  (+4 more)
apps/canIOMC_app/: CMakeLists.txt
apps/commMC_app/: CMakeLists.txt  commMC_app.c  commMC_app.h  commMC_app_cmds.c  commMC_app_cmds.h  commMC_app_dispatch.c  commMC_app_dispatch.h  commMC_config_msgids.h  mission_build.cmake
apps/payloadMC_app/: CMakeLists.txt  mission_build.cmake  payloadMC_app.c  payloadMC_app.h  payloadMC_app_cmds.c  payloadMC_app_cmds.h  payloadMC_app_dispatch.c  payloadMC_config_msgids.h  payloadMC_tbl.c  payloadMC_tbl.h
apps/powerMC_app/: CMakeLists.txt  mission_build.cmake  powerMC_app.c  powerMC_app.h  powerMC_app_cmds.c  powerMC_app_cmds.h  powerMC_app_dispatch.c  powerMC_app_dispatch.h  powerMC_config_msgids.h
apps/sch_lab/: CMakeLists.txt
sample_defs/: cpu1_cfe_es_startup.scr  targets.cmake
tools/: README_tcp_listener.md  tcp_ground_listener.py
(+64 files in other folders)
